--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
+    <span class="site-heading-upper text-primary mb-3">Cabinet d'ostéopathie</span>
     <span class="site-heading-lower">Business Casual</span>
   </h1>
 
