--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Nous contacter / Prendre rendez-vous</span>
               <br>
-              <span class="section-heading-lower"><i class="fa fa-phone"></i> 04 50 53 97 53</span>
+              <span class="section-heading-lower"><i class="fa fa-phone"></i><a href="tel:0450539753"> 04 50 53 97 53</a></span>
             </h2>
             <p class="mb-0">
             </p>
