fix bug trigger phone

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Cabinet d'ostéopathie</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Arve Osteo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -90,7 +90,9 @@
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Nous contacter / Prendre rendez-vous</span>
               <br>
-              <span class="section-heading-lower"><i class="fa fa-phone"></i><a href="tel:0450539753"> 04 50 53 97 53</a></span>
+              <div id="phone">
+                <span class="section-heading-lower"><i class="fa fa-phone"></i> <a href="tel:0450539753">04 50 53 97 53</a></span>
+              </div>
             </h2>
             <p class="mb-0">
             </p>
