make phone responsive

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <div class="cta-inner text-center rounded">
+          <div class="cta-inner text-center rounded" style="padding-bottom:75px;">
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Nous contacter / Prendre rendez-vous</span>
               <br>
               <div id="phone">
-                <span class="section-heading-lower"><i class="fa fa-phone"></i> <a href="tel:0450539753">04 50 53 97 53</a></span>
+                <span class="section-heading-lower"><i class="fa fa-phone"></i> <a href="tel:0450539753">04.50.53.97.53</a></span>
               </div>
             </h2>
             <p class="mb-0">
