design + welcome page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Cabinet d'osteopathie à Marnaz, dans la vallée de l'Arve.">
+  <meta name="author" content="Aude-Hélène Gay & Maxime Lesacq">
 
-  <title>Arve Osteo</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Arve Osteo" />
+  <meta property="og:url" content="http://www.arve-osteo.com/" />
+  <meta property="og:image" content="http://www.arve-osteo.com/img/arve-osteo-gay-lesacq.jpeg" />
+
+  <link rel="icon" href="img/favicon.ico"/>
+
+  <title>Arve Osteo - Présentation</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,8 +35,8 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">Arve Osteo</span>
-    <span class="site-heading-lower">Cabinet d'ostéopathie</span>
+    <span class="site-heading-upper text-primary mb-3">Cabinet d'ostéopathie</span>
+    <span class="site-heading-lower">Arve Osteo</span>
   </h1>
 
   <!-- Navigation -->
@@ -47,13 +54,13 @@
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">La consultation</a>
+            <a class="nav-link text-uppercase text-expanded" href="consultation.html">La consultation</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Les différentes prises en charge</a>
+            <a class="nav-link text-uppercase text-expanded" href="differentes-prises-en-charge.html">Les différentes prises en charge</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Informations pratiques</a>
+            <a class="nav-link text-uppercase text-expanded" href="informations.html">Informations pratiques</a>
           </li>
         </ul>
       </div>
@@ -63,16 +70,15 @@
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/arve-osteo-gay-lesacq.jpeg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
-            <!-- <span class="section-heading-upper">L'équipe</span> -->
             <span class="section-heading-lower">L'équipe</span>
+            <span class="section-heading-upper" id="name">Aude-Hélène Gay & Maxime Lesacq</span>
           </h2>
           <p class="mb-3">
-            Aude-Hélène Gay et Maxime Lesacq <br>
-            blabla <br>
-            blabla <br>
+            Diplomés de l'Institut Supérieur d'Ostéopathie de Lille.<br>
+            Nous pratiquons une prise en charge globale, tout en adaptant nos techniques en fonction du patient.
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#contact">Nous contacter / Prendre rendez-vous</a>
@@ -122,9 +128,10 @@
     </div>
   </section>
 
-  <footer class="footer text-faded text-center py-5">
+  <footer class="footer text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Site développé avec <i class="fa fa-heart"></i> à partir d'un template de <a href="https://startbootstrap.com/">startbootstrap.com</a></p>
+      <p class="m-0 small">Copyright &copy; Arve Osteo 2019</p>
     </div>
   </footer>
 
