--- a/consultation.html
+++ b/consultation.html
@@ -5,10 +5,17 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Cabinet d'osteopathie à Marnaz, dans la vallée de l'Arve.">
+  <meta name="author" content="Aude-Hélène Gay & Maxime Lesacq">
 
-  <title>Business Casual - Start Bootstrap Theme</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Arve Osteo" />
+  <meta property="og:url" content="http://www.arve-osteo.com/" />
+  <meta property="og:image" content="http://www.arve-osteo.com/img/arve-osteo-gay-lesacq.jpeg" />
+
+  <link rel="icon" href="img/favicon.ico"/>
+
+  <title>Arve Osteo - La consultation</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,37 +27,40 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.css" rel="stylesheet">
 
+  <!-- Font awesome icons  -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
-    <span class="site-heading-lower">Business Casual</span>
+    <span class="site-heading-upper text-primary mb-3">Cabinet d'ostéopathie</span>
+    <span class="site-heading-lower">Arve Osteo</span>
   </h1>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Arve Osteo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Présentation
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded" href="consultation.html">La consultation</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <a class="nav-link text-uppercase text-expanded" href="differentes-prises-en-charge.html">Les différentes prises en charge</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <a class="nav-link text-uppercase text-expanded" href="informations.html">Informations pratiques</a>
           </li>
         </ul>
       </div>
@@ -77,9 +87,10 @@
     </div>
   </section>
 
-  <footer class="footer text-faded text-center py-5">
+  <footer class="footer text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Site développé avec <i class="fa fa-heart"></i> à partir d'un template de <a href="https://startbootstrap.com/">startbootstrap.com</a></p>
+      <p class="m-0 small">Copyright &copy; Arve Osteo 2019</p>
     </div>
   </footer>
 
